# ScraperOne

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: scraperOne.py  scrapper_Rijin222001.py
